--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "swr": "^1.1.2"
   },
   "devDependencies": {
