--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
+    "screenfull": "^6.0.0",
     "swr": "^1.1.2"
   },
   "devDependencies": {
