--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^4.3.0",
     "next": "latest",
     "next-auth": "^4.0.6",
     "react": "^17.0.2",
