--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "titleBar.activeBackground": "#285cad",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#285cad99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#285cad"
 }
