--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "mongodb": "^4.3.0",
-    "next": "latest",
-    "next-auth": "^4.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-player": "^2.9.0",
-    "screenfull": "^6.0.0",
-    "swr": "^1.1.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"next": "12.0.7",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-player": "^2.9.0",
+		"screenfull": "^6.0.0",
+		"swr": "^1.1.2"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.0",
+		"postcss": "^8.4.4",
+		"tailwindcss": "^3.0.0"
+	}
 }
