--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"swr": "^1.1.2"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.0",
 		"postcss": "^8.4.4",
 		"tailwindcss": "^3.0.0"
